<resources>

    <string name="app_name">HeyU</string>
    <string name="hey_u">Hey U</string>
    <string name="create_a_new_account">Create a New Account</string>
    <string name="confirm_password">confirm password</string>
    <string name="register_new_user">Register</string>
    <string name="user_email">e-mail</string>
    <string name="user_password">password</string>
    <string name="obligatory_field">Obligatory Field</string>
    <string name="invalid_email">Invalid E-mail</string>
    <string name="display_name">display name</string>
    <string name="log_out">log out</string>
    <string name="account_settings">account settings</string>
    <string name="change_your_profile_photo">change your profile photo</string>
    <string name="change_your_current_status">Change Your Current Status</string>
    <string name="login">login</string>
    <string name="your_passwords_do_not_mismatch">Your password and confirmation password do not match.</string>
    <string name="user_profile_image">user profile image</string>
    <string name="ok_message">OK</string>
    <string name="status">Your Status</string>
    <string name="login_into_your_account">login into your account</string>

</resources>
